--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -1,24 +1,44 @@
 .avatar {
   width: 30px;
   border-radius: 50%;
+  &-large {
+    width: 50px;
+    border-radius: 50%;
+  }
+  &-big {
+    width: 100px;
+    border-radius: 50%;
+  }
+  &-bordered {
+    width: 30px;
+    border-radius: 50%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    border: white 1px solid;
+  }
+  &-square {
+    width: 30px;
+    border-radius: 0px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    border: white 1px solid;
+  }
 }
-.avatar-large {
-  width: 50px;
-  border-radius: 50%;
-}
-.avatar-big {
-  width: 100px;
-  border-radius: 50%;
-}
-.avatar-bordered {
-  width: 30px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
-.avatar-square {
-  width: 30px;
-  border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
+// .avatar-large {
+//   width: 50px;
+//   border-radius: 50%;
+// }
+// .avatar-big {
+//   width: 100px;
+//   border-radius: 50%;
+// }
+// .avatar-bordered {
+//   width: 30px;
+//   border-radius: 50%;
+//   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+//   border: white 1px solid;
+// }
+// .avatar-square {
+//   width: 30px;
+//   border-radius: 0px;
+//   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+//   border: white 1px solid;
+// }
