--- a/source/stylesheets/components/_badge.scss
+++ b/source/stylesheets/components/_badge.scss
@@ -24,23 +24,23 @@
     font-size: 25px;
     line-height: 30px;
     width: 30px;
-    color: grey;
+    color: $gray-light;
   }
   &-red {
-    background: #EE5F5B;
+    background: $red;
   }
   &-green {
-    background: #32B796;
+    background: $green;
   }
   &-blue {
-    background: #469AE0;
+    background: $blue;
   }
   &-black {
-    background: black;
+    background: $black;
   }
   &-bordered {
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    border: white 1px solid;
+    border: $white 1px solid;
   }
 }
 // .badge-red {
