--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -31,6 +31,8 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
+$black: #000;
+$white: #fff;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
